CHANGES.txt - 09/17/2001
------------------------

CHANGES IN CUPS V1.1.11

	- Added support for embedded TrueType fonts in PDF
	  files.
	- Added support for PostScript functions in PDF
	  files.
	- The scheduler could crash when BrowseShortNames
	  was set to "No".
	- The scheduler did not prevent MaxClients from being
	  set to 0, which could cause the scheduler to go in an
	  infinite loop when accepting a request.
	- Made some performance optimizations in the ippRead()
	  functions to make IPP request/response processing
	  faster.
	- The accept/reject/enable/disable command did not
	  support properly support the "-h" or default
	  server name.
	- The scheduler did not save the quota configuration
	  when the job-quota-period attribute was set to 0.
	- The LPDEST and PRINTER environment variables did not
	  support printer instances.


CHANGES IN CUPS V1.1.10-1

	- Minor fixes to the filter, systemv, and template
	  makefiles to install files properly.


CHANGES IN CUPS V1.1.10

	- Added a driver for DYMO label printers.
	- Added new ClassifyOverride directive to allow users
	  to override the classification of individual jobs.
	- Added new BrowseProtocols directive to control which
	  browse protocols are used (currently CUPS and SLP).
	- Added SLPv2 support (thanks to Matt Peterson for
	  contributing the initial implementation for CUPS.)
	- Adding a raw printer on a remote CUPS server now
	  correctly redirects PPD file requests to the remote
	  server.
	- The serial backend now limits writes to 1/10th
	  second worth of data to avoid buffer overflows
	  with some types of flow control.
	- The scheduler did not properly process PUT requests,
	  so configuration files could not be uploaded to the
	  server.
	- The scheduler did not strip trailing whitespace on
	  lines in the configuration files.
	- The httpWrite() function did not transition the PUT
	  request to the HTTP_STATUS state to get the status
	  from the server.